# ptn

./: .gitignore  README.md  debug_horizon.py  jobs.sh  pyproject.toml  requirements.txt  setup.sh  test_horizon_fix.py  train.py  train_smol.py  train_v2.py  train_v3.py
agora/: e1.yaml  hpo.yaml
config/: abl.yaml  mnist.yaml  mps-nosf-ucla.sh  nlp.yaml  shakespeare.yaml  ucla.yaml  wandb-hpo.yaml
dataloaders/: __init__.py  _dataset.py  fineweb.py  multitask.py  omi.py  prepare_fineweb.py  prepare_fineweb_dt.py  prepare_fineweb_v2.py  prepare_hf_ds.py  prepare_path_star.py  shakespeare.py
debug_nan/: input_y_nan_29.pt
examples/: agora-e1-mila.yaml  agora-e1-tamia.yaml  agora-e1.yaml  agora-e2-tamia.yaml  agora-hpo.yaml  orion-hpo.sh
mtp/: __init__.py  _types.py  utils.py
orion/: hpo.sh
ptn/: optimizers.py  utils.py
results/: einet.csv  latency_sweep_cpu.csv  latency_sweep_gpu.csv  memory_mps_bm.csv  memory_mps_bmnc.csv  memory_mps_sigma.csv  memory_sweep.csv  spn.txt  stability copy.csv  stability.csv  sweep.csv  sweep_cpu.csv  sweep_gpu.csv  tradeoffs-simple.csv  tradeoffs-simple.txt  tradeoffs.txt
scripts/: bias_var_tradeoff.py  debug.sh  debug_nan.py  eval.py  example_second_order_optimization.py  hmm.ipynb  hmm2.ipynb  minimal_hf_model.py  mnist.ipynb  mnist.py  mtp_analysis.ipynb  pc.ipynb  plot_mhead_stability.py  profile_bm.py  profile_cp_reducers.py  profile_instability.py  profile_latency.py  profile_memory.py  profile_mheads.py  profile_models.py  profile_mps_mem.py  profile_reducers.py  ptn_analysis.ipynb  qm-dmrg.ipynb  qm-dmrg.py  savail.sh  (+26 more)
(+142 files in other folders)
