[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtp" 
version = "1.0"
dependencies = [
    "transformers",
    "matplotlib",
    "torch",
    "tiktoken",
    "datasets",
    "lightning",
    "wandb",
]

[tool.setuptools]
packages = ["mtp", "dataloaders"] 